# finmars-adanos-market-sentiment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: finmars-setup.md
examples/: finmars_universal_request.json  simple_import_request.json
src/finmars_adanos_connector/: __init__.py  adanos.py  app.py  models.py  settings.py  transform.py
tests/: test_adanos.py  test_app.py  test_settings.py  test_transform.py
